--- a/kalima-platform/frontend/public/locales/ar/courseDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/courseDetails.json
@@ -54,5 +54,44 @@
     "errors": {
       "fetchError": "فشل تحميل تفاصيل الدورة",
       "unexpected": "حدث خطأ غير متوقع"
+    },
+    "containerTypes": {
+      "course": "دورة",
+      "year": "سنة",
+      "term": "فصل دراسي",
+      "month": "شهر",
+      "lecture": "محاضرة"
+    },
+    "pricing": {
+      "points": "نقطة",
+      "free": "مجاني"
+    },
+    "purchase": {
+      "purchased": "تم الشراء",
+      "availableInCourse": "متاح ضمن الدورة",
+      "buy": "شراء",
+      "getFree": "الحصول مجاناً",
+      "purchaseStatus": "حالة الشراء",
+      "notPurchased": "غير مشتراة",
+      "notDetermined": "غير محدد",
+      "purchaseSuccess": "تم الشراء بنجاح!",
+      "purchaseError": "فشل في عملية الشراء. يرجى المحاولة مرة أخرى.",
+      "purchaseInProgress": "جاري الشراء...",
+      "getCourseFree": "الحصول على الدورة مجانًا",
+      "buyCourse": "شراء الدورة"
+    },
+    "courseInfo": {
+      "price": "السعر",
+      "level": "المستوى",
+      "subject": "المادة",
+      "courseObjectives": "أهداف الدورة",
+      "courseContents": "محتويات الدورة"
+    },
+    "errors": {
+      "fetchError": "فشل في جلب بيانات الدورة",
+      "unexpected": "حدث خطأ غير متوقع",
+      "purchaseError": "فشل في عملية الشراء. يرجى المحاولة مرة أخرى.",
+      "purchaseProcessError": "حدث خطأ أثناء الشراء",
+      "courseNotFound": "لم يتم العثور على الدورة"
     }
   }
