--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
@@ -128,6 +128,7 @@
     "applyCoupon": "تطبيق",
     "priceSummary": "ملخص السعر",
     "originalPrice": "السعر الأصلي",
+    "discountedPrice": "السعر بعد الخصم",
     "discount": "الخصم",
     "total": "المجموع",
     "notes": "ملاحظات",
