--- a/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
@@ -128,6 +128,7 @@
     "applyCoupon": "Apply",
     "priceSummary": "Price Summary",
     "originalPrice": "Original Price",
+    "discountedPrice": "Discounted Price",
     "discount": "Discount",
     "total": "Total",
     "notes": "Notes",
