--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
@@ -106,11 +106,11 @@
     "transferNumberPlaceholder": "أدخل الرقم الذي حولت منه",
     "transferNumberHint": "رقم الهاتف أو الحساب الذي أرسلت منه الدفع",
     "bookPersonalization": "تخصيص الكتاب",
-    "nameOnBook": "الاسم على الكتاب *",
+    "nameOnBook": "اسم المدرس الذي تريد وضعه علي الكتاب*",
     "nameOnBookPlaceholder": "أدخل الاسم الذي سيظهر على الكتاب",
-    "numberOnBook": "الرقم على الكتاب *",
+    "numberOnBook": "رقم الهاتف المراد وضعه علي الكتاب *",
     "numberOnBookPlaceholder": "أدخل الرقم الذي سيظهر على الكتاب",
-    "seriesName": "اسم السلسلة *",
+    "seriesName": "اسم السلسه المراد وضعه علي الكتاب*",
     "seriesNamePlaceholder": "أدخل اسم السلسلة",
     "paymentScreenshot": "لقطة شاشة الدفع *",
     "fileUploaded": "تم رفع الملف بنجاح!",
