--- a/kalima-platform/frontend/public/locales/ar/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/ar/promoCodes.json
@@ -24,27 +24,27 @@
     }
   },
   "referral": {
-    "title": "كود الإحالة",
-    "completedTitle": "تم تطبيق الإحالة",
+    "title": "كودالدعوه",
+    "completedTitle": "تم تطبيق كود الدعوه",
     "used": "مستخدم",
     "oneTime": "استخدام مرة واحدة",
-    "infoTitle": "هل لديك كود إحالة؟",
-    "infoDescription": "إذا أحالك شخص ما إلى منصتنا، أدخل الرقم التسلسلي للإحالة أدناه للحصول على نقاط مكافأة ومساعدتهم في كسب المكافآت أيضاً!",
-    "label": "الرقم التسلسلي للإحالة",
+    "infoTitle": "هل لديك كود دعوه؟",
+    "infoDescription": "إذا أحالك شخص ما إلى منصتنا، أدخل الرقم التسلسلي للدعوه أدناه للحصول على نقاط مكافأة ومساعدتهم في كسب المكافآت أيضاً!",
+    "label": "الرقم التسلسلي للدعوه",
     "required": "مطلوب",
-    "placeholder": "أدخل الرقم التسلسلي للإحالة (مثل REF123456)",
+    "placeholder": "أدخل الرقم التسلسلي للدعوه (مثل REF123456)",
     "button": "تطبيق",
-    "alreadyApplied": "لقد قمت بتطبيق كود الإحالة بنجاح!",
-    "referredBy": "أحالك:",
-    "benefitsTitle": "فوائد الإحالة",
-    "benefit1": "احصل على نقاط مكافأة عند تطبيق كود إحالة صحيح",
-    "benefit2": "ساعد صديقك في كسب المكافآت لإحالته لك",
+    "alreadyApplied": "لقد قمت بتطبيق كود الدعوه بنجاح!",
+    "referredBy": "تم دعوتك من قبل:",
+    "benefitsTitle": "فوائد كود الدعوه",
+    "benefit1": "احصل على نقاط مكافأة عند تطبيق كود دعوه صحيح",
+    "benefit2": "ساعد صديقك في كسب المكافآت لدعوته لك",
     "benefit3": "الاستخدام لمرة واحدة يضمن التوزيع العادل للمكافآت",
-    "success": "تم تطبيق كود الإحالة بنجاح! قد تحصل على نقاط مكافأة.",
+    "success": "تم تطبيق كود الدعوه بنجاح! قد تحصل على نقاط مكافأة.",
     "errors": {
-      "emptySerial": "يرجى إدخال الرقم التسلسلي للإحالة",
-      "alreadyUsed": "لقد استخدمت كود إحالة بالفعل",
-      "generic": "فشل في تطبيق كود الإحالة"
+      "emptySerial": "يرجى إدخال الرقم التسلسلي للدعوه",
+      "alreadyUsed": "لقد استخدمت كود دعوه بالفعل",
+      "generic": "فشل في تطبيق كود الدعوه"
     }
   },
   "transactions": {
