--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -84,7 +84,7 @@
     "administrationZone": "المنطقة الإدارية",
     "selectAdministrationZone": "اختر المنطقة الإدارية",
     "yourCustomHobbies": "هواياتك الخاصة",
-    "referralSerial": "رقم التسلسل المرجعي",
+    "referralSerial": "كود الدعوه",
     "profilePic": "صورة الملف الشخصي"
 
     },
