smol translation fix

--- a/kalima-platform/frontend/public/locales/en/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/en/promoCodes.json
@@ -112,6 +112,7 @@
     "sequenceId" : "Sequence ID",
     "sequenceIdTooltip" : "Your sequence ID",
     "parentLinkTitle" :  "Parent Link",
-    "parentLinkDescription" : "Use this link to access your parent account"
+    "parentLinkDescription" : "Use this link to access your parent account",
+    "userSerial" : "Invitation Code"
   }
 }
