--- a/kalima-platform/frontend/public/locales/ar/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/ar/promoCodes.json
@@ -112,7 +112,8 @@
     "sequenceId" : "رقم التسلسل",
     "sequenceIdTooltip" : "رقم التسلسل الخاص بك",
     "parentLinkTitle" : "رابط الوالدين",
-    "parentLinkDescription" : "استخدم هذا الرابط للوصول للوالدين"
+    "parentLinkDescription" : "استخدم هذا الرابط للوصول للوالدين",
+    "userSerial" : "كود الدعوه"
   },
   "arrowAlt": "سهم بين البطاقات",
   "decorativeAlt": "زخارف نقطية",
