--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -27,6 +27,7 @@
     "customer": "Customer",
     "type": "Type",
     "price": "Price",
+    "couponCode" : "Coupon Code",
     "transferFrom": "Transfer From",
     "status": "Status",
     "notes": "Notes",
