--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -152,7 +152,9 @@
         "status": "الحالة",
         "date": "التاريخ",
         "to": "إلى",
-        "apply": "تطبيق الفلتر"
+        "apply": "تطبيق الفلتر",
+        "search" :"البحث في سجل العمليات...",
+        "email" :"البريد الإلكتروني"
       },
       
       "columns": {
@@ -161,7 +163,8 @@
         "action": "الإجراء",
         "resource": "العنصر",
         "datetime": "التاريخ والوقت",
-        "status": "الحالة"
+        "status": "الحالة",
+        "email":"البريد الإلكتروني"
       },
       
       "roles": {
