--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -22,6 +22,62 @@
         "save": "حفظ",
         "cancel": "الغاء"
       },
+      "userDetails": {
+  "name": "الاسم",
+  "email": "البريد الإلكتروني",
+  "gender": "النوع",
+  "phoneNumber": "رقم الهاتف",
+  "role": "الدور",
+  "joinedDate": "تاريخ الانضمام",
+  "government": "المحافظة",
+  "administrationZone": "المنطقة الإدارية",
+  "emailVerified": "تم التحقق من البريد الإلكتروني",
+  "successfulInvites": "الدعوات الناجحة",
+  "studentInfo": "معلومات الطالب",
+  "level": "المستوى",
+  "sequenceId": "الرقم التسلسلي",
+  "parentPhone": "هاتف ولي الأمر",
+  "faction": "الفئة",
+  "hobbies": "الهوايات",
+  "generalPoints": "النقاط العامة",
+  "totalPoints": "إجمالي النقاط",
+  "parentInfo": "معلومات ولي الأمر",
+  "children": "الأبناء",
+  "noChildren": "لا يوجد أبناء",
+  "views": "عدد المشاهدات",
+  "teacherInfo": "معلومات المعلم",
+  "subject": "المادة",
+  "teachingLevel": "المستوى التعليمي",
+  "school": "المدرسة",
+  "teachesAt": "يُدرّس في",
+  "centers": "المراكز",
+  "secondPhone": "رقم هاتف إضافي",
+  "socialMedia": "وسائل التواصل الاجتماعي",
+  "lecturerInfo": "معلومات المحاضر",
+  "bio": "نبذة",
+  "expertise": "الخبرة",
+  "assistantInfo": "معلومات المساعد",
+  "assignedLecturer": "المحاضر المعين",
+  "title": "تفاصيل المستخدم",
+  "close": "إغلاق"
+},
+"invites": {
+  "invite": "دعوة",
+  "invites": "دعوات",
+  "refreshSuccess": "تم تحديث الدعوات بنجاح!",
+  "refreshError": "حدث خطأ أثناء حساب بيانات الدعوات",
+  "calculating": "جاري الحساب...",
+  "refresh": "تحديث الدعوات"
+},
+"yes": "نعم",
+"no": "لا",
+"actions": {
+  "delete": "حذف",
+  "edit": "تعديل",
+  "cancel": "إلغاء",
+  "whatsapp": "إرسال رسالة واتساب",
+  "viewDetails": "عرض التفاصيل"
+},
       "export": {
         "export": "تصدير",
         "exporting": "جاري التصدير...",
@@ -121,11 +177,7 @@
       "name": "الاسم",
       "successfulInvites": "الدعوات الناجحة"
     },
-    "actions": {
-      "delete": "حذف",
-      "edit": "تعديل",
-      "cancel": "إلغاء"
-    },
+
     "pagination": {
       "previous": "السابق",
       "next": "التالي",
