--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -22,6 +22,62 @@
         "save": "Save",
         "cancel": "Cancel"
       },
+      "userDetails": {
+      "name": "Name",
+      "email": "Email",
+      "gender": "Gender",
+      "phoneNumber": "Phone Number",
+      "role": "Role",
+      "joinedDate": "Joined Date",
+      "government": "Government",
+      "administrationZone": "Administration Zone",
+      "emailVerified": "Email Verified",
+      "successfulInvites": "Successful Invites",
+      "studentInfo": "Student Information",
+      "level": "Level",
+      "sequenceId": "Sequence ID",
+      "parentPhone": "Parent Phone",
+      "faction": "Faction",
+      "hobbies": "Hobbies",
+      "generalPoints": "General Points",
+      "totalPoints": "Total Points",
+      "parentInfo": "Parent Information",
+      "children": "Children",
+      "noChildren": "No children",
+      "views": "Views",
+      "teacherInfo": "Teacher Information",
+      "subject": "Subject",
+      "teachingLevel": "Teaching Level",
+      "school": "School",
+      "teachesAt": "Teaches At",
+      "centers": "Centers",
+      "secondPhone": "Second Phone",
+      "socialMedia": "Social Media",
+      "lecturerInfo": "Lecturer Information",
+      "bio": "Bio",
+      "expertise": "Expertise",
+      "assistantInfo": "Assistant Information",
+      "assignedLecturer": "Assigned Lecturer",
+      "title": "User Details",
+      "close": "Close"
+    },
+    "invites": {
+      "invite": "Invite",
+      "invites": "Invites",
+      "refreshSuccess": "Invites refreshed successfully!",
+      "refreshError": "Error calculating invites data",
+      "calculating": "Calculating...",
+      "refresh": "Refresh Invites"
+    },
+    "yes": "Yes",
+    "no": "No",
+"actions": {
+  "delete": "Delete",
+  "edit": "Edit",
+  "cancel": "Cancel",
+  "whatsapp": "Send WhatsApp message",
+  "viewDetails": "View Details"
+},
       "export": {
         "export": "Export",
         "exporting": "Exporting...",
@@ -119,11 +175,6 @@
       "phone": "Phone",
       "name": "Name",
       "successfulInvites": "Successful Invites" 
-    },
-    "actions": {
-      "delete": "Delete",
-      "edit": "Edit",
-      "cancel":"Cancel"
     },
     "pagination": {
       "previous": "Previous",
