--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -248,7 +248,10 @@
         "assistant": "مساعد",
         "parent": "ولي أمر",
         "package": "باقات",
-        "lesson": "درس"
+        "lesson": "درس",
+        "ec": {
+          "purchase": "شراء"
+        }
       },
       "idDisplay": "ID: {{id}}",
       
