--- a/kalima-platform/frontend/public/locales/ar/home.json
+++ b/kalima-platform/frontend/public/locales/ar/home.json
@@ -25,7 +25,7 @@
     },
     "appDownload": {
       "title": "نزل تطبيقنا  ",
-      "content1": "افضل تطبيق مجاني ونزل تطبيقنا ",
+      "content1": "ونزل تطبيقنا المجاني",
       "content2": "  على موبايلك عشان تتعلم في",
       "now": "دلوقتـــي",
       "everywhere": " كل مكان "
