--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
@@ -132,7 +132,7 @@
     "discount": "الخصم",
     "total": "المجموع",
     "notes": "ملاحظات",
-    "notesPlaceholder": "أدخل الملاحظات"
+    "notesPlaceholder": "يمكنك كتابه كل ما تريده هنا قبل اجراء عمليه الشراء"
   },
   "sample": {
     "noSample": "لا يوجد ملف عينة",
