--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
@@ -28,7 +28,7 @@
     "avgPerProduct": "المتوسط لكل منتج"
   },
   "productPerformance": "أداء المنتجات",
-  "monthlyTrends": "الاتجاهات الشهرية",
+  "monthlyTrends": "المبيعات الشهريه",
   "table": {
     "rank": "الترتيب",
     "productName": "اسم المنتج",
