--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
@@ -110,7 +110,7 @@
     "nameOnBookPlaceholder": "أدخل الاسم الذي سيظهر على الكتاب",
     "numberOnBook": "رقم الهاتف المراد وضعه علي الكتاب *",
     "numberOnBookPlaceholder": "أدخل الرقم الذي سيظهر على الكتاب",
-    "seriesName": "اسم السلسه المراد وضعه علي الكتاب*",
+    "seriesName": "اسم السلسلة المراد وضعه علي الكتاب*",
     "seriesNamePlaceholder": "أدخل اسم السلسلة",
     "paymentScreenshot": "لقطة شاشة الدفع *",
     "fileUploaded": "تم رفع الملف بنجاح!",
