--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -156,8 +156,8 @@
     "roles": {
       "student": "طالب",
       "parent": "ولي أمر",
-      "lecturers": "معلم",
-      "lecturer": "معلم",
+      "lecturers": "محاضرين",
+      "lecturer": "محاضر",
       "teacher": "مدرس",
       "assistant": "مساعد",
       "admin": "أدمن",
