--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -66,7 +66,7 @@
   "Create": "اضافة",
   "MyLectures": "محاضراتي",
   "market": "المتجر",
-  "signedLecturers": "المعلمين الموقعين",
+  "signedLecturers": "المحاضرين الموقعين",
   "Analytics": "التحليلات"
 
   }
