whatsapp inquiry number handled, added new label for when a product is new, changed translation keys for lecturer, sub admin can now edit user's data, gallery image magnifyer

--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -156,8 +156,8 @@
     "roles": {
       "student": "طالب",
       "parent": "ولي أمر",
-      "lecturers": "معلم",
-      "lecturer": "معلم",
+      "lecturers": "المحاضرين",
+      "lecturer": "المحاضر",
       "teacher": "مدرس",
       "assistant": "مساعد",
       "admin": "أدمن",
@@ -222,7 +222,7 @@
       "roles": {
         "admin": "مسؤول",
         "subadmin": "مسؤول فرعي",
-        "lecturer": "معلم",
+        "lecturer": "المحاضر",
         "student": "طالب",
         "teacher": "معلم",
         "assistant": "مساعد"
