--- a/kalima-platform/frontend/public/locales/ar/createUser.json
+++ b/kalima-platform/frontend/public/locales/ar/createUser.json
@@ -23,7 +23,7 @@
     "subjects": "المواد الدراسية",
     "expertise": "التخصص",
     "bio": "السيرة الذاتية",
-    "assignedLecturer": "المعلم المسؤول",
+    "assignedLecturer": "المحاضر المسؤول",
     "sequencedIdOptional": "الرقم التسلسلي (اختياري)",
     "parentPhoneNumberOptional": "رقم هاتف ولي الأمر (اختياري)",
     "hobbies": "الاهتمامات",
@@ -50,7 +50,7 @@
     "school": "أدخل اسم المدرسة",
     "expertise": "أدخل التخصص",
     "bio": "أدخل السيرة الذاتية",
-    "selectLecturer": "اختر المعلم",
+    "selectLecturer": "اختر المحاضر",
     "selectSubject": "اختر المواد الدراسية",
     "selectHobbies": "اختر الاهتمامات",
     "addHobby": "اضافة اهتمام",
@@ -69,7 +69,7 @@
     "assistant": "مساعد",
     "student": "طالب",
     "parent": "ولي أمر",
-    "lecturer": "معلم",
+    "lecturer": "محاضر",
     "teacher" : "مدرس"
   },
   "gender": {
@@ -105,7 +105,7 @@
     "levelRequired": "الرجاء تحديد المستوى الدراسي",
     "invalidPhoneNumber": "رقم الهاتف غير صالح (10-15 أرقام)",
     "subjectsRequired": "الرجاء إدخال المواد الدراسية",
-    "lecturerRequired": "الرجاء تحديد المعلم المسؤول",
+    "lecturerRequired": "الرجاء تحديد المحاضر المسؤول",
     "required": "هذا الحقل مطلوب",
     "minLength": "يجب أن يكون على الأقل {{count}} أحرف",
     "maxLength": "يجب أن يكون على الأكثر {{count}} أحرف",
