--- a/kalima-platform/frontend/public/locales/ar/home.json
+++ b/kalima-platform/frontend/public/locales/ar/home.json
@@ -130,7 +130,7 @@
   "paid": "مدفوع",
   "currency": "جنيه",
   "lessonsCount": "  يحتوي علي عدد {{count}} دروس ",
-  "Experienced lecturer in computer science.": "محاضر ذو خبرة في علوم الحاسوب.",
+  "Experienced lecturer in computer science.": "محاضرين ذو خبرة في علوم الحاسوب.",
   "buttons":{
     "viewAll": "عرض الكل",
     "viewDetails": "عرض التفاصيل"
