--- a/kalima-platform/frontend/public/locales/ar/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/ar/promoCodes.json
@@ -61,7 +61,7 @@
     "title": "إجراءات سريعة"
   },
   "lecturerPoints": {
-    "title": "النقاط حسب المدرس",
+    "title": "النقاط حسب المحاضر",
     "description": "إجمالي النقاط المتاحة لكل مدرس"
   },
   "scanner": {
@@ -92,7 +92,7 @@
     "id": "رقم الكود"
   },
   "noData": "لا يوجد بيانات",
-  "noLecturerPoints": "لا توجد نقاط متاحة للمدرسين",
+  "noLecturerPoints": "لا توجد نقاط متاحة للمحاضرين",
   "noLectures": "لا توجد محاضرات متاحة",
   "noLecturesDescription": "لم تقم بالوصول إلى أي محاضرات بعد",
   "user": "مستخدم",
