--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-Market.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-Market.json
@@ -12,7 +12,8 @@
   "product": {
     "discounts": "خصم",
     "currency": "ج",
-    "viewDetails": "عرض التفاصيل"
+    "viewDetails": "عرض التفاصيل",
+    "new": "اضيف حديثا"
   },
   "sections": {
     "Designs": "تصاميم",
