fix edit modals for products and books

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
@@ -121,6 +121,10 @@
       }
     }
   },
+  "common": {
+    "cancel" : "الغاء",
+    "update": "نحديث"
+  },
   "fileUpload": {
     "uploaded": "تم الرفع",
     "upload": "رفع",
