--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-admin.json
@@ -7,7 +7,8 @@
     "totalSales": "إجمالي المبيعات",
     "pendingApplications": "الطلبات المعلقة",
     "numberOfProducts": "عدد المنتجات",
-    "numberOfSections": "عدد الأقسام"
+    "numberOfSections": "عدد الأقسام",
+    "numberOfSubSections": "عدد الأقسام الفرعية"
   },
   "categories": {
     "designsSection": "قسم التصاميم",
@@ -37,6 +38,26 @@
     "noSections": "لم يتم العثور على أقسام",
     "tryDifferentSearch": "جرب مصطلح بحث مختلف"
   },
+  "subSectionsManagement": {
+    "title": "إدارة الأقسام الفرعية",
+    "searchPlaceholder": "البحث في الأقسام الفرعية...",
+    "totalSubSections": "إجمالي الأقسام الفرعية",
+    "filtered": "مفلتر",
+    "search": "البحث",
+    "filterBySection": "تصفية حسب القسم",
+    "allSections": "جميع الأقسام",
+    "table": {
+      "name": "الاسم",
+      "section": "القسم الأساسي",
+      "numberOfProducts": "عدد المنتجات",
+      "actions": "الإجراءات",
+      "edit": "تعديل",
+      "delete": "حذف"
+    },
+    "noSubSectionsAvailable": "لا توجد أقسام فرعية متاحة",
+    "noSubSections": "لم يتم العثور على أقسام فرعية",
+    "tryDifferentSearch": "جرب مصطلح بحث مختلف"
+  },
   "forms": {
     "createProduct": {
       "title": "إنشاء منتج جديد",
@@ -45,6 +66,7 @@
         "title": "عنوان المنتج",
         "serial": "الرقم التسلسلي",
         "section": "القسم",
+        "subSection": "القسم الفرعي",
         "price": "السعر",
         "discountPercentage": "نسبة الخصم",
         "priceAfterDiscount": "السعر بعد الخصم",
@@ -59,6 +81,7 @@
         "title": "أدخل عنوان المنتج",
         "serial": "أدخل الرقم التسلسلي",
         "section": "اختر القسم",
+        "subSection": "اختر القسم الفرعي",
         "paymentNumber": "أدخل رقم الدفع",
         "whatsAppNumber": "أدخل رقم الواتساب",
         "description": "أدخل وصف المنتج..."
@@ -78,6 +101,7 @@
         "title": "عنوان الكتاب",
         "serial": "الرقم التسلسلي",
         "section": "القسم",
+        "subSection": "القسم الفرعي",
         "subject": "المادة",
         "price": "السعر",
         "discountPercentage": "نسبة الخصم",
@@ -91,6 +115,7 @@
         "title": "أدخل عنوان الكتاب",
         "serial": "أدخل الرقم التسلسلي",
         "section": "اختر القسم",
+        "subSection": "اختر القسم الفرعي",
         "subject": "اختر المادة",
         "paymentNumber": "أدخل رقم الدفع",
         "whatsAppNumber": "أدخل رقم الواتساب",
@@ -118,6 +143,18 @@
         "number": "أدخل رقم القسم",
         "description": "أدخل وصف القسم",
         "thumbnail": "أدخل اسم الصورة المصغرة"
+      }
+    },
+    "createSubSection": {
+      "title": "إنشاء قسم فرعي",
+      "submitButton": "إنشاء قسم فرعي",
+      "fields": {
+        "name": "اسم القسم الفرعي",
+        "section": "القسم الأساسي"
+      },
+      "placeholders": {
+        "name": "أدخل اسم القسم الفرعي",
+        "section": "اختر القسم الأساسي"
       }
     }
   },
@@ -181,10 +218,22 @@
       "message": "هل أنت متأكد أنك تريد حذف المنتج \"{{productName}}\"؟ لا يمكن التراجع عن هذا الإجراء.",
       "cancelButton": "إلغاء",
       "deleteButton": "حذف"
+    },
+    "editSubSection": {
+      "title": "تعديل القسم الفرعي",
+      "cancelButton": "إلغاء",
+      "updateButton": "تحديث القسم الفرعي"
+    },
+    "deleteSubSection": {
+      "title": "تأكيد الحذف",
+      "message": "هل أنت متأكد من أنك تريد حذف القسم الفرعي \"{{subSectionName}}\"؟ لا يمكن التراجع عن هذا الإجراء.",
+      "cancelButton": "إلغاء",
+      "deleteButton": "حذف"
     }
   },
   "alerts": {
     "fillRequiredFields": "يرجى ملء جميع الحقول المطلوبة",
+    "subSectionRequired": "يرجى اختيار قسم فرعي",
     "productCreatedSuccess": "تم إنشاء المنتج بنجاح!",
     "productCreateError": "خطأ في إنشاء المنتج: ",
     "productUpdatedSuccess": "تم تحديث المنتج بنجاح!",
@@ -199,7 +248,13 @@
     "sectionUpdatedSuccess": "تم تحديث القسم بنجاح!",
     "sectionUpdateError": "خطأ في تحديث القسم: ",
     "sectionDeletedSuccess": "تم حذف القسم بنجاح!",
-    "sectionDeleteError": "خطأ في حذف القسم: "
+    "sectionDeleteError": "خطأ في حذف القسم: ",
+    "subSectionCreatedSuccess": "تم إنشاء القسم الفرعي بنجاح!",
+    "subSectionCreateError": "خطأ في إنشاء القسم الفرعي: ",
+    "subSectionUpdatedSuccess": "تم تحديث القسم الفرعي بنجاح!",
+    "subSectionUpdateError": "خطأ في تحديث القسم الفرعي: ",
+    "subSectionDeletedSuccess": "تم حذف القسم الفرعي بنجاح!",
+    "subSectionDeleteError": "خطأ في حذف القسم الفرعي: "
   },
   "error": {
     "title": "خطأ!",
