--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -22,6 +22,8 @@
     "products": "Products"
   },
   "refresh": "Refresh",
+  "exportCSV": "Export CSV",
+  "exporting": "Exporting...",
   "table": {
     "product": "Product",
     "customer": "Customer",
@@ -81,6 +83,8 @@
   },
   "alerts": {
     "orderConfirmed": "Order confirmed successfully!",
+  "exportSuccess": "Orders exported successfully!",
+  "exportFailed": "Failed to export orders",
     "failedToConfirm": "Failed to confirm order: ",
     "notesSaved": "Notes saved successfully!",
     "failedToSaveNotes": "Failed to save notes: ",
