add store analytics export

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
@@ -44,4 +44,13 @@
     "tryAdjustingFilters": "جرب تعديل المرشحات",
     "totalCouponValue": "قيمة الكوبون الإجمالية"
   }
+  ,
+  "exportCSV": "تصدير CSV",
+  "exporting": "جارٍ التصدير...",
+  "csv": {
+    "overview": "نظرة عامة",
+    "dailyStats": "إحصاءات يومية",
+    "monthlyStats": "إحصاءات شهرية",
+    "productStats": "إحصاءات المنتجات"
+  }
 } 
