add xlsx support for exports

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
@@ -47,6 +47,7 @@
   ,
   "exportCSV": "تصدير CSV",
   "exporting": "جارٍ التصدير...",
+  "exportXLSX": "تصدير XLSX",
   "csv": {
     "overview": "نظرة عامة",
     "dailyStats": "إحصاءات يومية",
