--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -24,6 +24,7 @@
   "refresh": "تحديث",
   "exportCSV": "تصدير CSV",
   "exporting": "جارٍ التصدير...",
+  "exportXLSX": "تصدير XLSX",
   "table": {
     "product": "المنتج",
     "customer": "العميل",
