--- a/kalima-platform/frontend/public/locales/en/kalimaStore-analytics.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-analytics.json
@@ -47,6 +47,7 @@
   ,
   "exportCSV": "Export CSV",
   "exporting": "Exporting...",
+  "exportXLSX": "Export XLSX",
   "csv": {
     "overview": "Overview",
     "dailyStats": "Daily Statistics",
