--- a/kalima-platform/frontend/public/locales/ar/home.json
+++ b/kalima-platform/frontend/public/locales/ar/home.json
@@ -1,7 +1,7 @@
 {
   "welcome": {
     "title": "مرحبا بك في منصة {{highlight}}كلمة{{/highlight}}",
-    "description": "منصة كلمة هي منصة تعليم الكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
+    "description": "منصة كلمة هي منصة تعليم الكتروني توفر المنصة موارد للطلاب من الصف الأول الابتدائي حتى الصف الثالث الثانوي.",
     "kalima": "كلمة",
     "maleStudentAlt": "طالب",
     "femaleStudentAlt": "طالبة"
@@ -10,13 +10,13 @@
     "hero": {
       "title": "اقصر طريق نحو النجاح الباهر",
       "heading": "مرحبا بك في منصة كلمة",
-      "description": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي.",
+      "description": "منصة كلمة هي منصة تعليم إلكتروني توفر المنصة موارد للطلاب من الصف الأول الابتدائي حتى الصف الثالث الثانوي.",
       "cta": "تسجيل الدخول"
     },
     "about": {
       "title": "معلومات عنا",
       "heading": "أتعلم وجيب الدرجات النهائية ",
-      "description": "تتعامل كلمة مع منصة تعلم إلكتروني بشكل فعال للطلاب من الصف الرابع الابتدائي حتى الصف الثالث الثانوي. إننا نقدم لك أفضل الحلول لضمان تفوقك بالطالب",
+      "description": "تتعامل كلمة مع منصة تعلم إلكتروني بشكل فعال للطلاب من الصف الأول الابتدائي حتى الصف الثالث الثانوي. إننا نقدم لك أفضل الحلول لضمان تفوقك بالطالب",
       "features": {
         "teachers": "معلمين محترفين",
         "tests": "اختبارات على كل درس",
@@ -97,8 +97,8 @@
       "default": "الصف الأول",
       "primary": "الصف الأول الابتدائي",
       "middle": "الصف الأول الإعدادي",
-      "upperPrimary": "الصف الرابع الابتدائي",
-      "higherSecondary": "الصف الأول الثانوي"
+      "upperPrimary": "الصف الأول الابتدائي",
+      "higherSecondary": "الصف الثالث الثانوي"
     },
    "status": {
       "paid": "مدفوع",
