feat: Cart translation and more user readable errors

--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-Market.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-Market.json
@@ -13,7 +13,8 @@
   "product": {
     "discounts": "خصم",
     "currency": "ج",
-    "viewDetails": "عرض التفاصيل"
+    "viewDetails": "عرض التفاصيل",
+    "addToCart": "إضافة للسلة"
   },
   "sections": {
     "Designs": "تصاميم",
